# terminal

./: .default  README.md  autogen.sh  configure.ac
data/: terminal.1  terminal.desktop  terminal.xml
src/: Makefile  Makefile.am  console.c  console.h  data.h  dialog.c  dialog.h  font.h  lilyterm.h  main.h  menu.c  menu.h  misc.h  notebook.c  notebook.h  pagename.h  profile.c  profile.h  property.c  property.h  terminal.h  unit_test.sh  window.c  window.h
